--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--Header design-->
 
 <header class="header">
-<a href="#" class="logo">S.k The Life Coach</a>
+<a href="#" class="logo">S.k The Developer</a>
 
 
 <nav class="navbar">
@@ -39,7 +39,8 @@
 
 <h3>Hello, I am</h3>
 <h1>Sandra Wanjiku</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, qui aperiam odit quo iure ipsum. Quibusdam, harum. Reprehenderit quibusdam perspiciatis eum, aut odit repellendus corrupti, cupiditate error sit recusandae neque!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, qui aperiam odit quo iure ipsum. Quibusdam, harum. Reprehenderit quibusdam perspiciatis eum, aut odit repellendus corrupti, 
+    cupiditate error sit recusandae neque!</p>
 
 <div class="social-media">
     <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -48,33 +49,9 @@
     <a href="#"><i class="fa-brands fa-twitter"></i></a>
 </div>
 
-<a href="#" class="btn">Download my Book</a>
+<a href="#" class="btn">Download CV</a>
 
 
-</div>
-<div class="profession-container">
-    <div class="profession-box">
-        <div class="profession" style="--i:0;">
-            <i class="fa-solid fa-code"></i> 
-            <h3>Web Developer</h3>
-        </div>
-        <div class="profession" style="--i:1;">
-            <i class="fa-solid fa-camera"></i> 
-            <h3>Photographer</h3>
-        </div>
-        <div class="profession" style="--i:2;">
-            <i class="fa-solid fa-palette"></i>
-            <h3>Graphic Designer</h3>
-        </div>
-        <div class="profession" style="--i:3;">
-            <i class="fa-solid fa-video"></i>
-            <h3>Videographer</h3>
-        </div>
-
-        <div class="circle"></div>
-    </div>
-
-    <div class="overlay"></div>
 </div>
 
 <div class="home-img">
@@ -93,8 +70,12 @@
 
   <div class="about-content">
     <h2 class="heading">About <span>Me</span></h2>
-    <h3>Hi, I,m Here to Help You Raise Your Kids</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor soluta accusantium nemo at fugit cupiditate consequatur veniam amet alias? Debitis ipsa doloremque itaque maxime quaerat nobis officiis quibusdam, modi ullam.</p>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor soluta accusantium
+         nemo at fugit cupiditate consequatur veniam amet alias? Debitis ipsa doloremque itaque maxime quaerat nobis officiis quibusdam, modi ullam.
+        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, dignissimos quae. Explicabo nisi minus sit voluptatum sequi corporis voluptates assumenda similique laborum? Animi, natus accusantium. Laborum vitae
+         perferendis voluptates voluptate.</p>
     <a href="#" class="btn">Rean More</a>
   </div>
 </div>
